@@ -13,6 +13,10 @@ PyObjC NEWS</title>
 <ul>
 <li>(UNFINISHED) New RemotePyInterpreter example that demonstrates an
 out-of-process Python interpreter (primarily for IDE uses).</li>
+<li>New ManualBindings example in CocoaBindings that demonstrates how
+to develop programmatic bindings from a PyObjC application.
+Converted to PyObjC by ufielder from the &quot;Cocoa Bindings and Hints&quot;
+example of the same name.</li>
 <li>New HotKeyPython example in AppKit that demonstrates how to use
 Carbon global hot keys from a PyObjC application.  Also demonstrates
 how to use a NSApplication subclass.</li>
